# pixmux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
.github/workflows/: ci.yml
scripts/: gen_demo_asset.py  gen_fixtures.py  smoke.sh
src/: assemble.rs  doctor.rs  emit.rs  lib.rs  main.rs  parser.rs  protocol.rs  pty.rs  sixel.rs  tmux.rs  transform.rs
tests/: cli.rs  stream_fixtures.rs
tests/fixtures/: README.md  icat_chunked.tmux.golden
